blocks/footer/footer.css
.footer {
    width: 90%;
    display: -webkit-box;
    display: -ms-flex;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    max-width: 1184px;
    padding: 92px 0 24px 0;
    margin: 0 auto;
}

@media (max-width: 1024px) {
    .footer {
        max-width: 928px;
    }
}

@media (max-width: 768px) {
    .footer {
        max-width: 720px;
    }
}

@media (max-width: 660px) {
    .footer {
        max-width: 100%;
        padding: 0;
        padding-top: 64px;
        flex-direction: column;
        justify-content: flex-start;
        align-items: start;
    }
}

